<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioFragment">

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/name_record"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/btnStopRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="236dp"
        android:text="@string/name_stopRecording"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecord" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="408dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/name_recordedFailName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStopRecording" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="395dp"
        android:layout_height="365dp"
        android:layout_marginTop="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/playAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:text="@string/name_playAudio"
        app:layout_constraintStart_toEndOf="@+id/btnRecord"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stopPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_stopAudioPlayback"
        app:layout_constraintStart_toEndOf="@+id/btnStopRecording"
        app:layout_constraintTop_toBottomOf="@+id/playAudio" />
</android.support.constraint.ConstraintLayout>